tests/suite/snapshots/suite__check__tests__check__bad-procedure-call1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-procedure-call1.xi:2:5]
   │
 2 │     foo()
   ·     ──┬──  
   ·       ╰──── Not a procedure
───╯

